Fix minor display bug on mobile, add credits page

--- a/styles/main.css
+++ b/styles/main.css
@@ -107,6 +107,7 @@ body {
     font-family: "Roboto", Arial, sans-serif;
     line-height: 1.6;
     background-color: var(--background);
+    overflow-x: hidden;
 
     &.dark {
         .nav-logo {
@@ -409,7 +410,7 @@ main {
 
 .hero-content,
 #content {
-    max-width: min(1200px, 90%);
+    max-width: min(1200px, 90vw);
     margin: 2rem auto;
 }
 
@@ -1560,6 +1561,7 @@ body.dark .section-header {
 
 .foldout-content {
     padding: var(--space-md);
+    overflow-x: auto;
     
     ol, ul {
         margin: var(--space-sm) 0;
